# robotic_lab

./: README.md
MotorControl with 2PWM, 1 EN/: Motor2PWM.cpp  Motor2PWM.h
PICO_nasional_fix_no_rev/: CalibrateBMX160.h  Header.h  Lifter.cpp  Lifter.h  PICO_nasional_fix_no_rev.ino
ROS2 src file/array_msgs/: package.xml
ROS2 src file/array_msgs/msg/: Arrs.msg  ObjectPosition.msg
ROS2 src file/image_process/: CMakeLists_.txt  package.xml  setup.py
ROS2 src file/image_process/image_process/: image_seg_detect.py  image_sub.py  image_sub_process.py
ROS2 src file/main_control_python/: package.xml  setup.py
ROS2 src file/main_control_python/main_control_python/: cam_with_name
ROS2 src file/move_command/: setup.cfg
ROS2 src file/move_command/move_command/: backup.py  go_to.py  move_plan.py
ROS2 src file/ros_serial/: package.xml  setup.cfg
ROS2 src file/ros_serial/ros_serial/: stm_serial.py
STM_Program_Nasional/: Encoder.h  Header.h  Kinematics.cpp  Kinematics.h  LowerPart.cpp  LowerPart.h  Motor.cpp  Motor.h  MoveRobot.ino  PID.ino  STM_Program_Nasional.ino  Variable.h
google coral source file/: best_full_integer_quant_edgetpu.tflite  find_cam.py  image_process_send.py
image_process_YOLO_opencv/: (ROS2 file) image_receive.py
src/array_msgs/: CMakeLists.txt
src/image_process/image_process/: image_pub.py  image_sub_coral.py  image_sub_seg.py  line_follower.py
src/main_control_python/: setup.cfg
src/move_command/: package.xml  setup.py
src/ros_serial/: setup.py
src/ros_serial/ros_serial/: pico_serial.py  (+1 more)
zmq message protokol/: pub.py  sub.py
(+2 files in other folders)
